Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,8 @@
     "#     print(match)\n",
     "\n",
     "countrieslist = [d['country'] for d in soccer_match]\n",
-    "\n"
+    "\n",
+    "print(countrieslist)"
    ]
   },
   {
