Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,9 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['France', 'Australia']\n"
+     ]
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the name of the country for each team\n",
     "\n",
@@ -244,7 +252,9 @@
     "colors = None\n",
     "# code goes here\n",
     "\n",
-    "colors = [d['colors'] for d in soccer_match]"
+    "colors = [d['colors'] for d in soccer_match]\n",
+    "\n",
+    "print"
    ]
   },
   {
