Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,7 @@
     "\n",
     "colors = [d['colors'] for d in soccer_match]\n",
     "\n",
-    "\n",
+    "for i \n",
     "print(colors)"
    ]
   },
