Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,8 @@
     "\n",
     "colors = [d['colors'] for d in soccer_match]\n",
     "\n",
-    "for i \n",
+    "for i in colors:\n",
+    "    fo\n",
     "print(colors)"
    ]
   },
