Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
     "colors = [d['colors'] for d in soccer_match]\n",
     "\n",
     "for i in colors:\n",
-    "    fo\n",
+    "    for j in \n",
     "print(colors)"
    ]
   },
