--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,8 @@
     "colors = [d['colors'] for d in soccer_match]\n",
     "\n",
     "for i in colors:\n",
-    "    for j in \n",
+    "    for j in i:\n",
+    "        print(j)\n",
     "print(colors)"
    ]
   },
