--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,7 @@
     "\n",
     "colors = [d['colors'] for d in soccer_match]\n",
     "\n",
-    "for i in colors:\n",
+    "def flatteningfor i in colors:\n",
     "    for j in i:\n",
     "        print(j)\n",
     "        \n",
