--- a/index.ipynb
+++ b/index.ipynb
@@ -250,9 +250,10 @@
     "\n",
     "colors = [d['colors'] for d in soccer_match]\n",
     "\n",
-    "def flatteningFunction(for i in colors:\n",
-    "    for j in i:\n",
-    "        print(j)\n",
+    "def flatteningFunction(list):\n",
+    "    for i in colors:\n",
+    "        for j in i:\n",
+    "            print(j)\n",
     "        \n",
     "print(colors)"
    ]
