--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
     "colors = [d['colors'] for d in soccer_match]\n",
     "\n",
     "def flatteningFunction(list):\n",
-    "    for i in colors:\n",
+    "    for i in list:\n",
     "        for j in i:\n",
     "            print(j)\n",
     "        \n",
