--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,7 @@
     "        for j in i:\n",
     "            print(j)\n",
     "        \n",
-    "print(colors)"
+    "print(flatteningFunction(li)"
    ]
   },
   {
