--- a/index.ipynb
+++ b/index.ipynb
@@ -231,14 +231,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['blue', 'white', 'red'], ['green', 'gold']]\n"
+      "blue\n",
+      "white\n",
+      "red\n",
+      "green\n",
+      "gold\n",
+      "None\n"
      ]
     }
    ],
@@ -255,7 +260,7 @@
     "        for j in i:\n",
     "            print(j)\n",
     "        \n",
-    "print(flatteningFunction(colors)"
+    "print(flatteningFunction(colors))"
    ]
   },
   {
