--- a/index.ipynb
+++ b/index.ipynb
@@ -231,22 +231,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "blue\n",
-      "white\n",
-      "red\n",
-      "green\n",
-      "gold\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# iterate over the soccer_match list to create a new list with the colors for each team\n",
     "# this should be only one list containing strings for each of the country's colors\n",
@@ -254,12 +241,12 @@
     "\n",
     "colors = [d['colors'] for d in soccer_match]\n",
     "\n",
-    "def flatteningFunction(list):\n",
-    "    for i in list:\n",
-    "        for j in i:\n",
-    "            print(j)\n",
+    "# def flatteningFunction(list):\n",
+    "#     for i in list:\n",
+    "#         for j in i:\n",
+    "#             print(j)\n",
     "        \n",
-    "print(flatteningFunction(colors))"
+    "# print(flatteningFunction(colors))"
    ]
   },
   {
