--- a/index.ipynb
+++ b/index.ipynb
@@ -231,15 +231,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['blue', 'white', 'red'], ['green', 'gold']]\n"
+     ]
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the colors for each team\n",
     "# this should be only one list containing strings for each of the country's colors\n",
     "# code goes here\n",
     "\n",
     "colors = [d['colors'] for d in soccer_match]\n",
+    "\n",
+    "print(colors)\n",
     "\n",
     "# def flatteningFunction(list):\n",
     "#     for i in list:\n",
