--- a/index.ipynb
+++ b/index.ipynb
@@ -249,14 +249,13 @@
     "\n",
     "colors = [d['colors'] for d in soccer_match]\n",
     "\n",
-    "print(colors)\n",
     "\n",
-    "# def flatteningFunction(list):\n",
-    "#     for i in list:\n",
-    "#         for j in i:\n",
-    "#             print(j)\n",
+    "def flatteningFunction(list):\n",
+    "    for i in list:\n",
+    "        for j in i:\n",
+    "            print(j)\n",
     "        \n",
-    "# print(flatteningFunction(colors))"
+    "print(flatteningFunction(colors))"
    ]
   },
   {
