Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,14 +231,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['blue', 'white', 'red'], ['green', 'gold']]\n"
+      "blue\n",
+      "white\n",
+      "red\n",
+      "green\n",
+      "gold\n",
+      "None\n"
      ]
     }
    ],
