Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -260,7 +260,7 @@
     "        for j in i:\n",
     "            print(j)\n",
     "        \n",
-    "print(flatteningFunction(colors))"
+    "flatteningFunction(colors)"
    ]
   },
   {
