Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -242,8 +242,7 @@
       "white\n",
       "red\n",
       "green\n",
-      "gold\n",
-      "None\n"
+      "gold\n"
      ]
     }
    ],
