Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -259,7 +259,7 @@
     "        for j in i:\n",
     "            print(j)\n",
     "        \n",
-    "flatteningFunction(colors)"
+    "flat = (flatteningFunction(colors))"
    ]
   },
   {
