--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,8 @@
       "white\n",
       "red\n",
       "green\n",
-      "gold\n"
+      "gold\n",
+      "None\n"
      ]
     }
    ],
@@ -259,7 +260,9 @@
     "        for j in i:\n",
     "            print(j)\n",
     "        \n",
-    "flat = (flatteningFunction(colors))"
+    "flat = (flatteningFunction(colors))\n",
+    "\n",
+    "print(flat)"
    ]
   },
   {
