--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,7 @@
     "def flatteningFunction(list):\n",
     "    for i in list:\n",
     "        for j in i:\n",
-    "            print(j)\n",
+    "            retyrbprint(j)\n",
     "        \n",
     "flat = (flatteningFunction(colors))\n",
     "\n",
