Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -239,10 +239,6 @@
      "output_type": "stream",
      "text": [
       "blue\n",
-      "white\n",
-      "red\n",
-      "green\n",
-      "gold\n",
       "None\n"
      ]
     }
@@ -258,7 +254,7 @@
     "def flatteningFunction(list):\n",
     "    for i in list:\n",
     "        for j in i:\n",
-    "            retyrbprint(j)\n",
+    "            print(j)\n",
     "        \n",
     "flat = (flatteningFunction(colors))\n",
     "\n",
