--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,10 @@
      "output_type": "stream",
      "text": [
       "blue\n",
-      "None\n"
+      "white\n",
+      "red\n",
+      "green\n",
+      "gold\n"
      ]
     }
    ],
@@ -256,9 +259,7 @@
     "        for j in i:\n",
     "            print(j)\n",
     "        \n",
-    "flat = (flatteningFunction(colors))\n",
-    "\n",
-    "print(flat)"
+    "flat = (flatteningFunction(colors))"
    ]
   },
   {
