Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -259,7 +259,8 @@
     "        for j in i:\n",
     "            print(j)\n",
     "        \n",
-    "flat = (flatteningFunction(colors))"
+    "flat = (flatteningFunction(colors))\n",
+    "\n"
    ]
   },
   {
