Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -260,6 +260,8 @@
     "            print(j)\n",
     "        \n",
     "flat = (flatteningFunction(colors))\n",
+    "\n",
+    "v= print('hi')\n",
     "\n"
    ]
   },
