Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,8 @@
       "white\n",
       "red\n",
       "green\n",
-      "gold\n"
+      "gold\n",
+      "hi\n"
      ]
     }
    ],
@@ -262,7 +263,8 @@
     "flat = (flatteningFunction(colors))\n",
     "\n",
     "v= print('hi')\n",
-    "\n"
+    "\n",
+    "print"
    ]
   },
   {
