Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,8 @@
       "red\n",
       "green\n",
       "gold\n",
-      "hi\n"
+      "hi\n",
+      "None\n"
      ]
     }
    ],
@@ -264,7 +265,7 @@
     "\n",
     "v= print('hi')\n",
     "\n",
-    "print"
+    "print(v)"
    ]
   },
   {
