--- a/index.ipynb
+++ b/index.ipynb
@@ -231,18 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "blue\n",
-      "white\n",
-      "red\n",
-      "green\n",
-      "gold\n",
       "hi\n",
       "None\n"
      ]
@@ -253,15 +248,15 @@
     "# this should be only one list containing strings for each of the country's colors\n",
     "# code goes here\n",
     "\n",
-    "colors = [d['colors'] for d in soccer_match]\n",
+    "# colors = [d['colors'] for d in soccer_match]\n",
     "\n",
     "\n",
-    "def flatteningFunction(list):\n",
-    "    for i in list:\n",
-    "        for j in i:\n",
-    "            print(j)\n",
+    "# def flatteningFunction(list):\n",
+    "#     for i in list:\n",
+    "#         for j in i:\n",
+    "#             print(j)\n",
     "        \n",
-    "flat = (flatteningFunction(colors))\n",
+    "# flat = (flatteningFunction(colors))\n",
     "\n",
     "v= print('hi')\n",
     "\n",
