Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -256,11 +256,7 @@
     "#         for j in i:\n",
     "#             print(j)\n",
     "        \n",
-    "# flat = (flatteningFunction(colors))\n",
-    "\n",
-    "v= print('hi')\n",
-    "\n",
-    "print(v)"
+    "# flat = (flatteningFunction(colors))"
    ]
   },
   {
