Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,15 +231,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hi\n",
-      "None\n"
+      "blue\n",
+      "white\n",
+      "red\n",
+      "green\n",
+      "gold\n"
      ]
     }
    ],
@@ -251,12 +254,12 @@
     "# colors = [d['colors'] for d in soccer_match]\n",
     "\n",
     "\n",
-    "# def flatteningFunction(list):\n",
-    "#     for i in list:\n",
-    "#         for j in i:\n",
-    "#             print(j)\n",
+    "def flatteningFunction(list):\n",
+    "    for i in list:\n",
+    "        for j in i:\n",
+    "            print(j)\n",
     "        \n",
-    "# flat = (flatteningFunction(colors))"
+    "flat = (flatteningFunction(colors))"
    ]
   },
   {
