Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,7 @@
     "players = None\n",
     "# code goes here\n",
     "\n",
-    "colors = [d['pla'] for d in soccer_match]\n"
+    "players = [d['players'] for d in soccer_match]\n"
    ]
   },
   {
