--- a/index.ipynb
+++ b/index.ipynb
@@ -264,16 +264,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# iterate over the soccer_match list to create a new list with the players from each team\n",
     "# this should be only one list containing the dictionaries for each of the country's players\n",
-    "players = None\n",
+    "# players = None\n",
     "# code goes here\n",
     "\n",
-    "players = [d['players'] for d in soccer_match]\n"
+    "players = [d['players'] for d in soccer_match]\n",
+    "\n",
+    "playse"
    ]
   },
   {
