Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -371,9 +371,9 @@
     "# players = None\n",
     "# code goes here\n",
     "\n",
-    "players = [d['players'] for d in soccer_match]\n",
+    "playersinfo = [d['players'] for d in soccer_match]\n",
     "\n",
-    "players"
+    "playersname = "
    ]
   },
   {
