--- a/index.ipynb
+++ b/index.ipynb
@@ -373,7 +373,7 @@
     "\n",
     "playersinfo = [d['players'] for d in soccer_match]\n",
     "\n",
-    "playersname = [d['name'] for d in soccer_match]"
+    "playersname = [d['name'] for d in playersinfo]"
    ]
   },
   {
