--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
     "\n",
     "playersinfo = [d['players'] for d in soccer_match]\n",
     "\n",
-    "playersname = [d['name'] for d in playersinfo]"
+    "playersname = [f['name'] for d in playersinfo]"
    ]
   },
   {
