--- a/index.ipynb
+++ b/index.ipynb
@@ -264,20 +264,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-ef556c2ef641>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mplayersinfo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'players'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msoccer_match\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mplayersname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mplayersinfo\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-26-ef556c2ef641>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mplayersinfo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'players'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msoccer_match\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mplayersname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mplayersinfo\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
-     ]
+     "data": {
+      "text/plain": [
+       "[[{'name': 'Hugo LLORIS',\n",
+       "   'captain': True,\n",
+       "   'shirt_number': 1,\n",
+       "   'position': 'Goalie'},\n",
+       "  {'name': 'Benjamin PAVARD',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 2,\n",
+       "   'position': 'Defender'},\n",
+       "  {'name': 'Raphael VARANE',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 4,\n",
+       "   'position': 'Defender'},\n",
+       "  {'name': 'Samuel UMTITI',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 5,\n",
+       "   'position': 'Defender'},\n",
+       "  {'name': 'Paul POGBA',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 6,\n",
+       "   'position': 'Midfield'},\n",
+       "  {'name': 'Antoine GRIEZMANN',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 7,\n",
+       "   'position': 'Forward'},\n",
+       "  {'name': 'Kylian MBAPPE',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 10,\n",
+       "   'position': 'Forward'},\n",
+       "  {'name': 'Ousmane DEMBELE',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 11,\n",
+       "   'position': 'Forward'},\n",
+       "  {'name': 'Corentin TOLISSO',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 12,\n",
+       "   'position': 'Midfield'},\n",
+       "  {'name': 'Ngolo KANTE',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 13,\n",
+       "   'position': 'Midfield'},\n",
+       "  {'name': 'Lucas HERNANDEZ',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 21,\n",
+       "   'position': 'Defender'}],\n",
+       " [{'name': 'Mathew RYAN',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 1,\n",
+       "   'position': 'Goalie'},\n",
+       "  {'name': 'Mark MILLIGAN',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 5,\n",
+       "   'position': 'Defender'},\n",
+       "  {'name': 'Mathew LECKIE',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 7,\n",
+       "   'position': 'Forward'},\n",
+       "  {'name': 'Robbie KRUSE',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 10,\n",
+       "   'position': 'Forward'},\n",
+       "  {'name': 'Andrew NABBOUT',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 11,\n",
+       "   'position': 'Forward'},\n",
+       "  {'name': 'Aaron MOOY',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 13,\n",
+       "   'position': 'Midfield'},\n",
+       "  {'name': 'Mile JEDINAK',\n",
+       "   'captain': True,\n",
+       "   'shirt_number': 15,\n",
+       "   'position': 'Midfield'},\n",
+       "  {'name': 'Aziz BEHICH',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 16,\n",
+       "   'position': 'Defender'},\n",
+       "  {'name': 'Joshua RISDON',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 19,\n",
+       "   'position': 'Defender'},\n",
+       "  {'name': 'Trent SAINSBURY',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 20,\n",
+       "   'position': 'Defender'},\n",
+       "  {'name': 'Tom ROGIC',\n",
+       "   'captain': False,\n",
+       "   'shirt_number': 23,\n",
+       "   'position': 'Midfield'}]]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -288,7 +373,9 @@
     "\n",
     "playersinfo = [d['players'] for d in soccer_match]\n",
     "\n",
-    "playersname = [f['name'] for f in playersinfo]"
+    "playersinfo\n",
+    "\n",
+    "# playersname = [f['name'] for f in playersinfo]"
    ]
   },
   {
