Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -373,7 +373,7 @@
     "\n",
     "playersinfo = [d['players'] for d in soccer_match]\n",
     "\n",
-    "playersinfo\n",
+    "flatteningFunction(colors)playersinfo\n",
     "\n",
     "# playersname = [f['name'] for f in playersinfo]"
    ]
