--- a/index.ipynb
+++ b/index.ipynb
@@ -264,105 +264,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[{'name': 'Hugo LLORIS',\n",
-       "   'captain': True,\n",
-       "   'shirt_number': 1,\n",
-       "   'position': 'Goalie'},\n",
-       "  {'name': 'Benjamin PAVARD',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 2,\n",
-       "   'position': 'Defender'},\n",
-       "  {'name': 'Raphael VARANE',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 4,\n",
-       "   'position': 'Defender'},\n",
-       "  {'name': 'Samuel UMTITI',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 5,\n",
-       "   'position': 'Defender'},\n",
-       "  {'name': 'Paul POGBA',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 6,\n",
-       "   'position': 'Midfield'},\n",
-       "  {'name': 'Antoine GRIEZMANN',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 7,\n",
-       "   'position': 'Forward'},\n",
-       "  {'name': 'Kylian MBAPPE',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 10,\n",
-       "   'position': 'Forward'},\n",
-       "  {'name': 'Ousmane DEMBELE',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 11,\n",
-       "   'position': 'Forward'},\n",
-       "  {'name': 'Corentin TOLISSO',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 12,\n",
-       "   'position': 'Midfield'},\n",
-       "  {'name': 'Ngolo KANTE',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 13,\n",
-       "   'position': 'Midfield'},\n",
-       "  {'name': 'Lucas HERNANDEZ',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 21,\n",
-       "   'position': 'Defender'}],\n",
-       " [{'name': 'Mathew RYAN',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 1,\n",
-       "   'position': 'Goalie'},\n",
-       "  {'name': 'Mark MILLIGAN',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 5,\n",
-       "   'position': 'Defender'},\n",
-       "  {'name': 'Mathew LECKIE',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 7,\n",
-       "   'position': 'Forward'},\n",
-       "  {'name': 'Robbie KRUSE',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 10,\n",
-       "   'position': 'Forward'},\n",
-       "  {'name': 'Andrew NABBOUT',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 11,\n",
-       "   'position': 'Forward'},\n",
-       "  {'name': 'Aaron MOOY',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 13,\n",
-       "   'position': 'Midfield'},\n",
-       "  {'name': 'Mile JEDINAK',\n",
-       "   'captain': True,\n",
-       "   'shirt_number': 15,\n",
-       "   'position': 'Midfield'},\n",
-       "  {'name': 'Aziz BEHICH',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 16,\n",
-       "   'position': 'Defender'},\n",
-       "  {'name': 'Joshua RISDON',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 19,\n",
-       "   'position': 'Defender'},\n",
-       "  {'name': 'Trent SAINSBURY',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 20,\n",
-       "   'position': 'Defender'},\n",
-       "  {'name': 'Tom ROGIC',\n",
-       "   'captain': False,\n",
-       "   'shirt_number': 23,\n",
-       "   'position': 'Midfield'}]]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Hugo LLORIS', 'captain': True, 'shirt_number': 1, 'position': 'Goalie'}\n",
+      "{'name': 'Benjamin PAVARD', 'captain': False, 'shirt_number': 2, 'position': 'Defender'}\n",
+      "{'name': 'Raphael VARANE', 'captain': False, 'shirt_number': 4, 'position': 'Defender'}\n",
+      "{'name': 'Samuel UMTITI', 'captain': False, 'shirt_number': 5, 'position': 'Defender'}\n",
+      "{'name': 'Paul POGBA', 'captain': False, 'shirt_number': 6, 'position': 'Midfield'}\n",
+      "{'name': 'Antoine GRIEZMANN', 'captain': False, 'shirt_number': 7, 'position': 'Forward'}\n",
+      "{'name': 'Kylian MBAPPE', 'captain': False, 'shirt_number': 10, 'position': 'Forward'}\n",
+      "{'name': 'Ousmane DEMBELE', 'captain': False, 'shirt_number': 11, 'position': 'Forward'}\n",
+      "{'name': 'Corentin TOLISSO', 'captain': False, 'shirt_number': 12, 'position': 'Midfield'}\n",
+      "{'name': 'Ngolo KANTE', 'captain': False, 'shirt_number': 13, 'position': 'Midfield'}\n",
+      "{'name': 'Lucas HERNANDEZ', 'captain': False, 'shirt_number': 21, 'position': 'Defender'}\n",
+      "{'name': 'Mathew RYAN', 'captain': False, 'shirt_number': 1, 'position': 'Goalie'}\n",
+      "{'name': 'Mark MILLIGAN', 'captain': False, 'shirt_number': 5, 'position': 'Defender'}\n",
+      "{'name': 'Mathew LECKIE', 'captain': False, 'shirt_number': 7, 'position': 'Forward'}\n",
+      "{'name': 'Robbie KRUSE', 'captain': False, 'shirt_number': 10, 'position': 'Forward'}\n",
+      "{'name': 'Andrew NABBOUT', 'captain': False, 'shirt_number': 11, 'position': 'Forward'}\n",
+      "{'name': 'Aaron MOOY', 'captain': False, 'shirt_number': 13, 'position': 'Midfield'}\n",
+      "{'name': 'Mile JEDINAK', 'captain': True, 'shirt_number': 15, 'position': 'Midfield'}\n",
+      "{'name': 'Aziz BEHICH', 'captain': False, 'shirt_number': 16, 'position': 'Defender'}\n",
+      "{'name': 'Joshua RISDON', 'captain': False, 'shirt_number': 19, 'position': 'Defender'}\n",
+      "{'name': 'Trent SAINSBURY', 'captain': False, 'shirt_number': 20, 'position': 'Defender'}\n",
+      "{'name': 'Tom ROGIC', 'captain': False, 'shirt_number': 23, 'position': 'Midfield'}\n"
+     ]
     }
    ],
    "source": [
@@ -373,7 +304,7 @@
     "\n",
     "playersinfo = [d['players'] for d in soccer_match]\n",
     "\n",
-    "flatteningFunction(colors)playersinfo\n",
+    "flatteningFunction(playersinfo)\n",
     "\n",
     "# playersname = [f['name'] for f in playersinfo]"
    ]
