Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,7 @@
     "# this should be only one list containing the dictionaries for each of the country's captains\n",
     "captains = None\n",
     "\n",
-    "capitainslist = [d['players'] for d in ]\n",
+    "capitainslist = [d['players'] for d in playersinfo]\n",
     "# code goes here\n",
     "\n"
    ]
