Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,8 @@
     "# this should be only one list containing the dictionaries for each of the country's captains\n",
     "captains = None\n",
     "\n",
-    "for players in \n",
+    "for players in playersinfo:\n",
+    "    \n",
     "# code goes here\n",
     "\n"
    ]
