--- a/index.ipynb
+++ b/index.ipynb
@@ -319,8 +319,8 @@
     "# this should be only one list containing the dictionaries for each of the country's captains\n",
     "captains = None\n",
     "\n",
-    "for players in playersinfo:\n",
-    "    if\n",
+    "for player in playersinfo:\n",
+    "    if pl\n",
     "# code goes here\n",
     "\n"
    ]
