--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,7 @@
     "captains = None\n",
     "\n",
     "for player in playersinfo:\n",
-    "    if pl\n",
+    "    if player\n",
     "# code goes here\n",
     "\n"
    ]
