Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,7 @@
     "captains = None\n",
     "\n",
     "for player in playersinfo:\n",
-    "    if player[]\n",
+    "    if player['captain']+\n",
     "# code goes here\n",
     "\n"
    ]
