Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,8 @@
     "\n",
     "for player in playersinfo:\n",
     "    if player['captain']== True:\n",
-    "        capitains.append(pla)\n",
+    "        capitains.append(player)\n",
+    "        \n",
     "# code goes here\n",
     "\n"
    ]
