Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,8 @@
     "for player in playersinfo:\n",
     "    if player['captain']== True:\n",
     "        capitains.append(player)\n",
-    "        \n",
+    "    else:\n",
+    "        Contin\n",
     "# code goes here\n",
     "\n"
    ]
