Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,7 @@
     "    if player['captain']== True:\n",
     "        capitains.append(player)\n",
     "    else:\n",
-    "        Contin\n",
+    "        continue\n",
     "# code goes here\n",
     "\n"
    ]
