--- a/index.ipynb
+++ b/index.ipynb
@@ -304,7 +304,9 @@
     "\n",
     "playersinfo = [d['players'] for d in soccer_match]\n",
     "\n",
-    "flatteningFunction(playersinfo)\n",
+    "plaflatteningFunction(playersinfo)\n",
+    "\n",
+    "\n",
     "\n",
     "# playersname = [f['name'] for f in playersinfo]"
    ]
