Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
     "\n",
     "playersinfo = [d['players'] for d in soccer_match]\n",
     "\n",
-    "plaflatteningFunction(playersinfo)\n",
+    "playersFlattened=flatteningFunction(playersinfo)\n",
     "\n",
     "\n",
     "\n",
