Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,7 @@
     "\n",
     "captains = []\n",
     "\n",
-    "for player in playersinfo:\n",
+    "for player in playersFlattened:\n",
     "    if player['captain'] == True:\n",
     "        capitains.append(player)\n",
     "    else:\n",
