--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,7 @@
     "captains = []\n",
     "\n",
     "for player in playersFlattened:\n",
-    "    if player.va['captain'] == True:\n",
+    "    if player['captain'] == True:\n",
     "        capitains.append(player)\n",
     "    else:\n",
     "        continue\n",
