Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -336,7 +336,7 @@
     "captains = []\n",
     "for player in playersFlattened:\n",
     "    if player['captain'] == True:\n",
-    "        capitains.append(player)\n",
+    "        captains.append(player)\n",
     "    else:\n",
     "        continue\n",
     "        \n",
