--- a/index.ipynb
+++ b/index.ipynb
@@ -304,7 +304,7 @@
     "\n",
     "playersinfo = [d['players'] for d in soccer_match]\n",
     "\n",
-    "playersFlattened=flatteningFunction(playersinfo)\n",
+    "playersFlattened=list(flatteningFunction(playersinfo)\n",
     "\n",
     "\n",
     "\n",
