Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -307,7 +307,7 @@
     "playersFlattened=flatteningFunction(playersinfo)\n",
     "\n",
     "\n",
-    "\n",
+    "type(playerFlatten)\n",
     "\n",
     "\n",
     "# playersname = [f['name'] for f in playersinfo]"
