Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -296,15 +296,14 @@
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'playerFlattened' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-40-7d0294662abb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplayerFlattened\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'playerFlattened' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "NoneType"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -318,7 +317,7 @@
     "playersFlattened=flatteningFunction(playersinfo)\n",
     "\n",
     "\n",
-    "type(playerFlattened)\n",
+    "type(playersFlattened)\n",
     "\n",
     "\n",
     "# playersname = [f['name'] for f in playersinfo]"
