--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
     "        for j in i:\n",
     "            print(j)\n",
     "        \n",
-    "flat = (flatteningFunction(colors))"
+    "flat = [flatteningFunction(colors)]"
    ]
   },
   {
