Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,6 +255,7 @@
     "\n",
     "\n",
     "def flatteningFunction(list):\n",
+    "    flatten\n",
     "    for i in list:\n",
     "        for j in i:\n",
     "            print(j)\n",
