Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,10 +255,10 @@
     "\n",
     "\n",
     "def flatteningFunction(list):\n",
-    "    flatten\n",
+    "    flattened=[]\n",
     "    for i in list:\n",
     "        for j in i:\n",
-    "            print(j)\n",
+    "            ap(j)\n",
     "        \n",
     "flat = [flatteningFunction(colors)]"
    ]
