Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,9 +231,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the colors for each team\n",
     "# this should be only one list containing strings for each of the country's colors\n",
@@ -250,7 +261,7 @@
     "        \n",
     "flat = [flatteningFunction(colors)]\n",
     "\n",
-    "fl"
+    "flat"
    ]
   },
   {
