Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -259,7 +259,7 @@
     "        for j in i:\n",
     "            flattened.append(j)\n",
     "        \n",
-    "flat = [flatteningFunction(colors)]\n",
+    "flat = flatteningFunction(colors)\n",
     "\n",
     "flat"
    ]
