Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,20 +231,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[None]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# iterate over the soccer_match list to create a new list with the colors for each team\n",
     "# this should be only one list containing strings for each of the country's colors\n",
@@ -261,7 +250,7 @@
     "        \n",
     "flat = flatteningFunction(colors)\n",
     "\n",
-    "flat"
+    "pflat"
    ]
   },
   {
