Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,7 @@
     "    for i in list:\n",
     "        for j in i:\n",
     "            flattened.append(j)\n",
-    "    \n",
+    "    return flattened\n",
     "        \n",
     "flat = flatteningFunction(colors)\n",
     "\n",
