Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -420,7 +420,7 @@
     "    else:\n",
     "        continue\n",
     "\n",
-    "captains\n",
+    "print(captains)\n",
     "        \n",
     "# code goes here\n",
     "\n"
