Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
     "    else:\n",
     "        continue\n",
     "\n",
-    "print(captains\n",
+    "print(captains)\n",
     "        \n",
     "# code goes here\n",
     "\n"
