Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -403,6 +403,7 @@
     "# this should be only one list containing the dictionaries for each of the country's captains\n",
     "\n",
     "\n",
+    "def searchForfun\n",
     "captains = []\n",
     "for player in playersFlattened:\n",
     "    if player['captain'] == True:\n",
