Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -403,10 +403,10 @@
     "# this should be only one list containing the dictionaries for each of the country's captains\n",
     "\n",
     "\n",
-    "def searchForfun\n",
+    "def searchForfunc(key,condition)\n",
     "captains = []\n",
     "for player in playersFlattened:\n",
-    "    if player['captain'] == True:\n",
+    "    if player['key'] == condition:\n",
     "        captains.append(player)\n",
     "    else:\n",
     "        continue\n",
