Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -404,14 +404,15 @@
     "\n",
     "\n",
     "def searchForfunc(key,condition)\n",
-    "captains = []\n",
-    "for player in playersFlattened:\n",
-    "    if player['key'] == condition:\n",
-    "        captains.append(player)\n",
-    "    else:\n",
-    "        continue\n",
+    "    captains = []\n",
+    "        for player in playersFlattened:\n",
+    "            if player['key'] == condition:\n",
+    "                captains.append(player)\n",
+    "            else:\n",
+    "                continue\n",
     "\n",
-    "print(captains)\n",
+    "searchForfunc(cao)\n",
+    "# print(captains)\n",
     "        \n",
     "# code goes here\n",
     "\n"
