Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -387,14 +387,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'name': 'Hugo LLORIS', 'captain': True, 'shirt_number': 1, 'position': 'Goalie'}, {'name': 'Mile JEDINAK', 'captain': True, 'shirt_number': 15, 'position': 'Midfield'}]\n"
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-64-1b2562709782>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-64-1b2562709782>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    for player in playersFlattened:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
@@ -403,15 +404,16 @@
     "# this should be only one list containing the dictionaries for each of the country's captains\n",
     "\n",
     "\n",
-    "def searchForfunc(key,condition)\n",
+    "def searchForfunc(key,condition):\n",
     "    captains = []\n",
-    "        for player in playersFlattened:\n",
-    "            if player['key'] == condition:\n",
-    "                captains.append(player)\n",
-    "            else:\n",
+    "    for player in playersFlattened:\n",
+    "        if player['key'] == condition:\n",
+    "            captains.append(player)\n",
+    "        else:\n",
     "                continue\n",
     "\n",
-    "searchForfunc(cao)\n",
+    "searchForfunc(captain, True)\n",
+    "\n",
     "# print(captains)\n",
     "        \n",
     "# code goes here\n",
