Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "  'position': 'Midfield'}]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
     "\n",
     "\n",
     "def searchForfunc(key,condition):\n",
-    "    returnedFro = []\n",
+    "    captains = []\n",
     "    for player in playersFlattened:\n",
     "        if player[key] == condition:\n",
     "            captains.append(player)\n",
@@ -431,10 +431,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# iterate over the soccer_match list to create a new list with the players from ONLY the home team\n",
     "# this should be only one list containing the dictionaries for each of the home team's players\n",
