Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -440,6 +440,16 @@
     "# this should be only one list containing the dictionaries for each of the home team's players\n",
     "home_team_players = None\n",
     "\n",
+    "def searchForfuncreturndict(key,condition):\n",
+    "    returnFromsearch = []\n",
+    "    for player in soccer_match:\n",
+    "        if player[key] == condition:\n",
+    "            returnFromsearch.append(player)\n",
+    "        else:\n",
+    "            continue\n",
+    "    return returnFromsearch\n",
+    "\n",
+    "searchForfuncreturnplayerdict(\"captain\", True)\n",
     "# code goes here"
    ]
   },
