Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -440,7 +440,7 @@
     "# this should be only one list containing the dictionaries for each of the home team's players\n",
     "home_team_players = None\n",
     "\n",
-    "def searchForfuncreturndict(key,condition):\n",
+    "def searchForfuncreturnTeamdict(key,condition):\n",
     "    returnFromsearch = []\n",
     "    for player in soccer_match:\n",
     "        if player[key] == condition:\n",
