Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -442,7 +442,7 @@
     "\n",
     "def searchForfuncreturnTeamdict(key,condition):\n",
     "    returnFromsearch = []\n",
-    "    for player in soccer_match:\n",
+    "    for team in soccer_match:\n",
     "        if player[key] == condition:\n",
     "            returnFromsearch.append(player)\n",
     "        else:\n",
