Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -443,7 +443,7 @@
     "def searchForfuncreturnTeamdict(key,condition):\n",
     "    returnFromsearch = []\n",
     "    for team in soccer_match:\n",
-    "        if player[key] == condition:\n",
+    "        if team[key] == condition:\n",
     "            returnFromsearch.append(player)\n",
     "        else:\n",
     "            continue\n",
