Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -444,12 +444,12 @@
     "    returnFromsearch = []\n",
     "    for team in soccer_match:\n",
     "        if team[key] == condition:\n",
-    "            returnFromsearch.append(player)\n",
+    "            returnFromsearch.append(team)\n",
     "        else:\n",
     "            continue\n",
     "    return returnFromsearch\n",
     "\n",
-    "searchForfuncreturnplayerdict(\"captain\", True)\n",
+    "searchForfuncreturnTeamdict(\"captain\", True)\n",
     "# code goes here"
    ]
   },
