Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -517,6 +517,17 @@
     "# with the players from ONLY the away team with the position of forward\n",
     "# this should be only one list containing the dictionaries for each of the selected players\n",
     "forwards = None\n",
+    "\n",
+    "def searchForfuncreturnTeamdict(key,condition):\n",
+    "    returnFromsearch = []\n",
+    "    for team in soccer_match:\n",
+    "        if team[key] == condition:\n",
+    "            returnFromsearch.append(team['players'])\n",
+    "        else:\n",
+    "            continue\n",
+    "    return returnFromsearch\n",
+    "\n",
+    "searchForfuncreturnTeamdict(\"home_team\", True)\n",
     "# code goes here"
    ]
   },
