Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -518,10 +518,10 @@
     "# this should be only one list containing the dictionaries for each of the selected players\n",
     "forwards = None\n",
     "\n",
-    "def searchForfuncreturnTeamdict(key1,key2,condition1,condition2):\n",
+    "def searchForfuncreturnTeamPositiondict(key1,key2,condition1,condition2):\n",
     "    returnFromsearch = []\n",
     "    for team in soccer_match:\n",
-    "        if team[key1] == condition and team[:\n",
+    "        if team[key1] == condition1 and team[key2] == condition2:\n",
     "            returnFromsearch.append(team['players'])\n",
     "        else:\n",
     "            continue\n",
