Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -535,7 +535,8 @@
     "    returnFromsearch = []\n",
     "    for team in soccer_match:\n",
     "        if team[key1] == condition1:\n",
-    "            for player in playersplayer[key2] == condition2:\n",
+    "            for player in team[ke:\n",
+    "                if player[key2] == condition2:\n",
     "            returnFromsearch.append(team['players'])\n",
     "        else:\n",
     "            continue\n",
