Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -535,14 +535,14 @@
     "    returnFromsearch = []\n",
     "    for team in soccer_match:\n",
     "        if team[key1] == condition1:\n",
-    "            for player in team[key1:\n",
+    "            for player in players:\n",
     "                if player[key2] == condition2:\n",
     "            returnFromsearch.append(team['players'])\n",
     "        else:\n",
     "            continue\n",
     "    return returnFromsearch\n",
     "\n",
-    "searchForfuncreturnTeamPositiondict(\"home_team\",player[\"position\"], True,\"Forward\")\n",
+    "searchForfuncreturnTeamPositiondict(\"home_team\",\"position\", True,\"Forward\")\n",
     "# code goes here"
    ]
   },
