Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -557,16 +557,8 @@
     "# assign the player with the highst shirt_number to player_with_highest_num variable\n",
     "player_with_highest_num = None\n",
     "\n",
-    "def HighestPlayerShirt(key1,key2,condition1,condition2):\n",
-    "    returnFromsearch = []\n",
-    "    for team in soccer_match:\n",
-    "        if team[key1] == condition1:\n",
-    "            for player in team['players']:\n",
-    "                if player[key2] == condition2:\n",
-    "                    returnFromsearch.append(player)\n",
-    "        else:\n",
-    "            continue\n",
-    "    return returnFromsearch\n",
+    "for feature in soccer_match:\n",
+    "    for \n",
     "\n",
     "searchForfuncreturnTeamPositiondict(\"home_team\",\"position\", True,\"Forward\")\n",
     "# code goes here"
